--- a/loveproof-frontend/package.json
+++ b/loveproof-frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "tailwindcss": "^3.4.4"
   }
 }
